@@ -26,7 +26,12 @@ if not "%JAVA_HOME%" == "" (
     goto gotJavaHome
 )
 
-rem @WINDOWS_INSTALLER_1@
+rem will be set by the installer
+set JAVA_HOME="$JDKPath"
+
+rem second check
+if not "%JAVA_HOME%" == "" goto gotJavaHome
+
 
 echo WARNING: JAVA_HOME not found in your environment.
 echo.
@@ -35,14 +40,17 @@ echo location of the Java Virtual Machine you want to use in case of run fail.
 echo.
 
 :gotJavaHome
-rem @WINDOWS_INSTALLER_2@
-
 if not "%EXIST_HOME%" == "" goto gotExistHome
 
-rem try to guess (will be set by the installer)
+rem try to guess (will be overridden by the installer)
 set EXIST_HOME=.
 
+rem will be set by the installer
+set EXIST_HOME=$INSTALL_PATH
+
+
 if exist "%EXIST_HOME%\start.jar" goto gotExistHome
+
 set EXIST_HOME=..
 if exist "%EXIST_HOME%\start.jar" goto gotExistHome
 
@@ -52,5 +60,14 @@ echo home directory of eXist.
 goto :eof
 
 :gotExistHome
-%JAVA_RUN% -Dexist.home="%EXIST_HOME%" -jar "%EXIST_HOME%\start.jar" shutdown %CMD_LINE_ARGS%
+set MX=768
+rem will be set by the installer
+set MX=$MAX_MEMORY
+
+
+set JAVA_ENDORSED_DIRS="%EXIST_HOME%\lib\endorsed"
+set JAVA_OPTS="-Xms128m -Xmx%MX%m -Dfile.encoding=UTF-8 -Djava.endorsed.dirs=%JAVA_ENDORSED_DIRS%"
+
+%JAVA_RUN% "%JAVA_OPTS%"  -Dexist.home="%EXIST_HOME%" -jar "%EXIST_HOME%\start.jar" backup %CMD_LINE_ARGS%
 :eof
+
